--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,12 @@
 <resources>
     <string name="app_name">Presupuestos  Lircayhub</string>
 
-    <string name="developer">Creado por Ariel Fuentes OwO</string>
+    <string name="developer">Creado por Ariel Fuentes</string>
+
+    <string name="Menu1">Ajustes</string>
+    <string name="Menu2">Mapa</string>
+    <string name="Menu3">Analisis</string>
+    <string name="Menu4">Gastos</string>
 
     <string name="Gastos">Gastos: </string>
 
@@ -50,9 +55,12 @@
         <item>Ahorros e Inversiones</item>
         <item>Otros</item>
     </string-array>
+
     <string name="title_activity_menu">Menu</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
