Arreglo del fragment de gastos, entrelace del boton flotante con la activity de crear gastos y el funcionamiento del boton cancelar. Mejora en la interfas del botom navigation y del boton para ir a los ajustes (preferencias)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,9 +4,10 @@
     <string name="developer">Creado por Ariel Fuentes</string>
 
     <string name="Menu1">Ajustes</string>
-    <string name="Menu2">Mapa</string>
-    <string name="Menu3">Analisis</string>
-    <string name="Menu4">Gastos</string>
+    <string name="Menu2">Inicio</string>
+    <string name="Menu3">Mapa</string>
+    <string name="Menu4">Analisis</string>
+    <string name="Menu5">Gastos</string>
 
     <string name="Gastos">Gastos: </string>
 
