Punto de guardado - Mostrar item de gastos En desarrollo el mostrar en detalle

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,10 @@
     <string name="Categoria">Categoria: </string>
     <string name="Nom_Categoria">Otros</string>
 
+    <string name="btnEditar">Editar</string>
+    <string name="btnEliminar">Eliminar</string>
+    <string name="btnGuardar">Guardar</string>
+
     <string name="Guargar">Guardar</string>
     <string name="Cancelar">Cancelar</string>
 
